# taumel

./: .gitignore  CONTEXT.md  README.md  dune-project  flake.nix  package-lock.json  package.json  taumel.opam  tsconfig.json
issues/: deliver-portable-agent-results.md  render-agent-run-diagnostics.md  track-labeled-agent-activity.md
lib/: agent_git_broker.ml  agent_profiles.ml  agent_registry.ml  agent_routing.ml  agent_runs.ml  agent_runs_codec.ml  agent_state_store.ml  agent_wait.ml  agent_workspace.ml  agent_worktree.ml  agent_worktree.mli  agents.ml  agents_codec.ml  capability_profile.ml  capability_profile.mli  child_session.ml  command_plan.ml  compaction_model.ml  cron.ml  cron_expr.ml  dune  environment_context.ml  exa.ml  exec_policy.ml  file_read.ml  footer_model.ml  footer_model.mli  global_settings.ml  goal.ml  mutation_plan.ml  permissions.ml  permissions.mli  ralph_loop.ml  request_user_input.ml  runtime_policy.ml  sandbox.ml  sandbox.mli  sandbox_exec_host.ml  sandbox_patch.ml  sandbox_paths.ml  (+13 more)
plans/: agent-permissions.md  capability-profile.md  compaction-model.md  cron.md  engineering-standards.md  exa.md  exec-command.md  exec-policy.md  footer.md  goal.md  implementation-journal.md  porting-strategy.md  ralph-loop.md  request-user-input.md  sandbox.md  shared-infrastructure.md  skill-resolver.md  subagents.md  system-prompt.md  thinking-shortcuts.md  thread-tools.md  tool-gateway.md  tool-rendering.md  usage.md  view-media.md  visibility-controls.md
scripts/: build-extension.sh  build-ocaml.sh  generate-contract-bindings.mjs
src/: agent-capability-runtime.ts  agent-orchestration.ts  agent-runs-manager.ts  approval-coordinator.ts  authority-plans.ts  bridge-action-contracts.ts  bridge-child-session-contracts.ts  bridge-contract-catalog.ts  bridge-contracts.ts  composer.ts  (+35 more)
test/: audit_gallery.mjs  check_source_file_sizes.mjs  check_typed_boundaries.mjs  dune  markdown-loader.mjs  smoke_agent_async.mjs  smoke_agent_child_session_cleanup.mjs  smoke_agent_contracts.mjs  smoke_agent_lifecycle.mjs  smoke_agent_missing_tool_surface.mjs  smoke_agent_runs_manager.mjs  smoke_agent_tool_surface.mjs  smoke_agent_worktree_runtime.mjs  smoke_agent_worktrees.mjs  smoke_artifact.mjs  smoke_authority_plans.mjs  smoke_bridge_contracts.mjs  smoke_compaction_model.mjs  smoke_cron_loop.mjs  smoke_cron_persistence.mjs  smoke_descriptor_paths.mjs  smoke_entrypoint.mjs  smoke_exa_contracts.mjs  smoke_exec_notifications.mjs  smoke_exec_pty.mjs  smoke_extension_artifact.mjs  smoke_extension_session_replacement.mjs  smoke_footer_artifact.mjs  smoke_gateway_registration.mjs  smoke_global_settings.mjs  smoke_goal_commands.mjs  smoke_path_authorization.mjs  smoke_prepared_exec_contract.mjs  smoke_ralph_tool_surface.mjs  smoke_session_entries.mjs  smoke_thinking_shortcuts.mjs  smoke_tool_contracts.mjs  smoke_tool_metadata_requirements.mjs  smoke_tool_renderers.mjs  smoke_usage_inspection.mjs  (+29 more)
test/fixtures/: tool-surface-provider.ts
(+42 files in other folders)
