(test
 (name test_footer_model)
 (modules test_footer_model)
 (package taumel)
 (libraries taumel))

(test
 (name test_core_architecture)
 (modules test_core_architecture)
 (package taumel)
 (libraries taumel))

(test
 (name test_core_regressions)
 (modules test_core_regressions)
 (package taumel)
 (libraries taumel unix))

(test
 (name test_thread_tools)
 (modules test_thread_tools)
 (package taumel)
 (libraries taumel))

(test
 (name test_mutation_plan)
 (modules test_mutation_plan)
 (package taumel)
 (libraries taumel))

(test
 (name test_file_read)
 (modules test_file_read)
 (package taumel)
 (libraries taumel))

(test
 (name test_usage_plan)
 (modules test_usage_plan)
 (package taumel)
 (libraries taumel))

(test
 (name test_command_plan)
 (modules test_command_plan)
 (package taumel)
 (libraries taumel))

(test
 (name test_global_settings)
 (modules test_global_settings)
 (package taumel)
 (libraries taumel))

(test
 (name test_environment_context)
 (modules test_environment_context)
 (package taumel)
 (libraries taumel))

(test
 (name test_runtime_policy)
 (modules test_runtime_policy)
 (package taumel)
 (libraries taumel))

(test
 (name test_exa_plan)
 (modules test_exa_plan)
 (package taumel)
 (libraries taumel))

(test
 (name test_goal_prd)
 (modules test_goal_prd)
 (package taumel)
 (libraries taumel))

(test
 (name test_agents_plan)
 (modules test_agents_plan)
 (package taumel)
 (libraries taumel))

(test
 (name test_agent_workspace)
 (modules test_agent_workspace)
 (package taumel)
 (libraries taumel))

(test
 (name test_agent_git_broker)
 (modules test_agent_git_broker)
 (package taumel)
 (libraries taumel))

(test
 (name test_agent_git_broker_hardening)
 (modules test_agent_git_broker_hardening)
 (package taumel)
 (libraries taumel))

(test
 (name test_agent_worktree_lifecycle)
 (modules test_agent_worktree_lifecycle)
 (package taumel)
 (libraries taumel))

(test
 (name test_exec_policy)
 (modules test_exec_policy)
 (package taumel)
 (libraries taumel))

(test
 (name test_skill_resolver)
 (modules test_skill_resolver)
 (package taumel)
 (libraries taumel))

(test
 (name test_compaction_model)
 (modules test_compaction_model)
 (package taumel)
 (libraries taumel))

(test
 (name test_cron)
 (modules test_cron)
 (package taumel)
 (libraries taumel unix))
